--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
 
 
     <div class="menu">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="About.html">About</a>
       <a href="ContactUs.html">Contact Us</a>
     </div>
@@ -53,7 +53,7 @@
       <p class="change"> CHANGE begins with YOU! Make a CHANGE!</p>
 
     <footer class="footertwo">
-      <a href="Index.html">Home Page</a>
+      <a href="index.html">Home Page</a>
       <a href="About.html">Mission</a>
       <a href="ContactUs.html">Forms Page</a>
     </footer>
