--- a/ContactUs.html
+++ b/ContactUs.html
@@ -11,7 +11,7 @@
     <h1 class="one">Contact Us</h1>
 
     <div class="menu">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="About.html">About</a>
       <a href="ContactUs.html">Contact Us</a>
     </div>
@@ -42,7 +42,7 @@
 <p class="change"> If you have any concerns, comments, or ideas please feel free to contact us!</p><p class="change">Thank you!</p>
 
     <footer class="footertwo">
-      <a href="Index.html">Home Page</a>
+      <a href="index.html">Home Page</a>
       <a href="About.html">Mission</a>
       <a href="ContactUs.html">Forms Page</a>
     </footer>
