--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="one"> Hunger and How it Affects Us</h1>
 
     <div class="menu">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="About.html">About</a>
       <a href="ContactUs.html">Contact Us</a>
     </div>
@@ -98,7 +98,7 @@
     <br>
 
     <footer class="footer">
-      <a href="Index.html">Home Page</a>
+      <a href="index.html">Home Page</a>
       <a href="About.html">Mission</a>
       <a href="ContactUs.html">Forms Page</a>
     </footer>
